--- a/Core/MVVM/View/MoreInfoExchangesView.xaml
+++ b/Core/MVVM/View/MoreInfoExchangesView.xaml
@@ -20,37 +20,37 @@
 
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Name: "/>
+                            <Label Content="{DynamicResource Name}"/>
                             <Label Content="{Binding Exchanges.Name}"/>
                         </StackPanel>
                     </Border>
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Country: "/>
+                            <Label Content="{DynamicResource Country}"/>
                             <Label Content="{Binding Exchanges.Country}"/>
                         </StackPanel>
                     </Border>
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Year established: "/>
+                            <Label Content="{DynamicResource YearEstablished}"/>
                             <Label Content="{Binding Exchanges.YearEstablished}"/>
                         </StackPanel>
                     </Border>
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Centralized: "/>
+                            <Label Content="{DynamicResource Centralized}"/>
                             <Label Content="{Binding Exchanges.Centralized}"/>
                         </StackPanel>
                     </Border>
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Trust score: "/>
+                            <Label Content="{DynamicResource TrustScore}"/>
                             <Label Content="{Binding Exchanges.TrustScore}"/>
                         </StackPanel>
                     </Border>
                     <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Trust score rank: "/>
+                            <Label Content="{DynamicResource TrustScoreRank}"/>
                             <Label Content="{Binding Exchanges.TrustScoreRank}"/>
                         </StackPanel>
                     </Border>
@@ -102,7 +102,7 @@
                         <Button Background="Transparent" BorderBrush="Transparent" Command="{Binding Back}" Padding="0">
                             <Button.Content>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Content="Back"/>
+                                    <Label Content="{DynamicResource Back}"/>
                                     <Image Source="/Image/Icons/Back.png" Height="25" />
                                 </StackPanel>
                             </Button.Content>
